[CSSRegions]Implement NamedFlow::overflow https://bugs.webkit.org/show_bug.cgi?id=78880
Reviewed by David Hyatt.

Source/WebCore:

Test: fast/regions/webkit-named-flow-overflow.html

* dom/WebKitNamedFlow.cpp:
(WebCore::WebKitNamedFlow::WebKitNamedFlow):
(WebCore::WebKitNamedFlow::overflow):
(WebCore):
* dom/WebKitNamedFlow.h:
(WebCore):
(WebCore::WebKitNamedFlow::create):
(WebKitNamedFlow):
* dom/WebKitNamedFlow.idl:
* rendering/RenderFlowThread.cpp:
(WebCore::RenderFlowThread::RenderFlowThread):
(WebCore::RenderFlowThread::ensureNamedFlow):
(WebCore::RenderFlowThread::computeOverflowStateForRegions):
* rendering/RenderFlowThread.h:

LayoutTests:

* fast/regions/resources/helper.js:
(testContentToRegionsMapping):
* fast/regions/resources/region-style.css:
* fast/regions/webkit-named-flow-overflow-expected.txt: Added.
* fast/regions/webkit-named-flow-overflow.html: Added.


Canonical link: https://commits.webkit.org/95935@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@108103 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/LayoutTests/fast/regions/resources/region-style.css
+++ b/LayoutTests/fast/regions/resources/region-style.css
@@ -37,3 +37,12 @@
     border: 1px solid black;
 }
 
+.pass {
+    font-weight: bold;
+    color: green;
+}
+
+.fail {
+    font-weight: bold;
+    color: red;
+}
